tests/reference/asr_preprocess-cpp8-edc2b52.stderr
semantic error: Variable 'abcx' is not declared
  --> tests/errors/cpp8.f90:12:12
   |
12 |   print *, abcx
   |            ^^^^ 'abcx' is undeclared
